salvia_macro/tests/query_ui/fail/arg_traits_no_hash.rs
use salvia::{query, QueryContext};

#[derive(Copy, Clone, Eq, PartialEq)]
struct A;

#[query]
async fn f(_a: A, _cx: &QueryContext) {}

fn main() {}
